--- a/BackEnd/APILogin/package.json
+++ b/BackEnd/APILogin/package.json
@@ -12,6 +12,8 @@
     "debug": "~2.2.0",
     "express": "~4.14.0",
     "express-session": "^1.15.2",
+    "google-auth-library": "^0.10.0",
+    "googleapis": "^19.0.0",
     "hbs": "~4.0.1",
     "mongoose": "^4.9.7",
     "morgan": "~1.7.0",
