--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "google-auth-library": "^0.10.0",
     "googleapis": "^19.0.0",
     "hbs": "~4.0.1",
+    "jsonwebtoken": "^7.4.0",
     "mongoose": "^4.9.7",
     "morgan": "~1.7.0",
     "nodemon": "^1.11.0",
+    "passport": "^0.3.2",
+    "passport-jwt": "^2.2.1",
     "serve-favicon": "~2.3.0"
   }
 }
