--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "google-auth-library": "^0.10.0",
     "googleapis": "^19.0.0",
     "hbs": "~4.0.1",
-    "jsonwebtoken": "^7.4.0",
+    "jsonwebtoken": "^7.4		.0",
     "mongoose": "^4.9.7",
     "morgan": "~1.7.0",
     "nodemon": "^1.11.0",
