--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "bcrypt": "^1.0.2",
     "body-parser": "~1.15.2",
     "cookie-parser": "~1.4.3",
+    "cors": "^2.8.3",
     "debug": "~2.2.0",
     "express": "~4.14.0",
     "express-session": "^1.15.2",
     "google-auth-library": "^0.10.0",
     "googleapis": "^19.0.0",
     "hbs": "~4.0.1",
-    "jsonwebtoken": "^7.4		.0",
+    "jsonwebtoken": "^7.4.0",
     "mongoose": "^4.9.7",
     "morgan": "~1.7.0",
     "nodemon": "^1.11.0",
