--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "dependencies": {
     "bcrypt": "^1.0.2",
     "body-parser": "~1.15.2",
-    "cookie-parser": "~1.4.3",
+    "cookie-parser": "^1.4.3",
     "cors": "^2.8.3",
     "debug": "~2.2.0",
     "express": "~4.14.0",
@@ -22,6 +22,7 @@
     "nodemon": "^1.11.0",
     "passport": "^0.3.2",
     "passport-jwt": "^2.2.1",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "session": "^0.1.0"
   }
 }
