--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "passport-jwt": "^2.2.1",
     "serve-favicon": "~2.3.0",
     "session": "^0.1.0"
+  },
+  "devDependencies": {
+    "@types/node": "^7.0.18"
   }
 }
