--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^7.4.0",
     "mongoose": "^4.9.7",
     "morgan": "~1.7.0",
+    "multer": "^1.3.0",
     "nodemon": "^1.11.0",
     "passport": "^0.3.2",
     "passport-jwt": "^2.2.1",
